WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250458
REGRESSION (@property): Crash with animations and rollback cascades
https://bugs.webkit.org/show_bug.cgi?id=250458
Summary
REGRESSION (@property): Crash with animations and rollback cascades
Antti Koivisto
Reported
2023-01-11 08:39:03 PST
We have null animation layer.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2023-01-11 08:39:51 PST
Under Style::PropertyCascade::shouldApplyAfterAnimation
Antti Koivisto
Comment 2
2023-01-11 08:39:56 PST
rdar://104119443
Antti Koivisto
Comment 3
2023-01-11 08:50:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8524
EWS
Comment 4
2023-01-11 12:09:55 PST
Committed
258797@main
(37dd354f5387): <
https://commits.webkit.org/258797@main
> Reviewed commits have been landed. Closing PR #8524 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug