REGRESSION (@property): Crash with animations and rollback cascades https://bugs.webkit.org/show_bug.cgi?id=250458 rdar://104119443

Reviewed by Alan Baradlay.

* LayoutTests/fast/animation/animation-cascade-crash-expected.txt: Added.
* LayoutTests/fast/animation/animation-cascade-crash.html: Added.
* Source/WebCore/style/PropertyCascade.cpp:
(WebCore::Style::PropertyCascade::PropertyCascade):

Ensure that also rollback cascades have AnimationLayer.

Canonical link: https://commits.webkit.org/258797@main